--- a/tp_sdp_christophe_simon_nathan.ipynb
+++ b/tp_sdp_christophe_simon_nathan.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "0a5e29a9",
    "metadata": {},
    "outputs": [
@@ -21,9 +21,6 @@
       "Pros: ['A', 'D', 'E']\n",
       "Cons: ['C', 'F', 'G']\n",
       "Nombre de paires valides identifiées : 6\n",
-      "Set parameter Username\n",
-      "Set parameter LicenseID to value 2755283\n",
-      "Academic license - for non-commercial use only - expires 2026-12-15\n",
       "\n",
       "Solution Optimale Trouvée (Explication Valide) :\n",
       " - Trade-off (A,C)\n",
@@ -120,6 +117,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "42e3dfd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Données chargées :\n",
+      "Candidats : ['x', 'y', 'z', 't', 'u', 'v', 'w', \"w'\"]\n",
+      "Poids : {'A': 8, 'B': 7, 'C': 7, 'D': 6, 'E': 6, 'F': 5, 'G': 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TABLEAU DE DONNÉES COMPLET (Notes des candidats)\n",
+    "candidates_data = {\n",
+    "    'x': {'A': 85, 'B': 81, 'C': 71, 'D': 69, 'E': 75, 'F': 81, 'G': 88},\n",
+    "    'y': {'A': 81, 'B': 81, 'C': 75, 'D': 63, 'E': 67, 'F': 88, 'G': 95},\n",
+    "    'z': {'A': 74, 'B': 89, 'C': 74, 'D': 81, 'E': 68, 'F': 84, 'G': 79},\n",
+    "    't': {'A': 74, 'B': 71, 'C': 84, 'D': 91, 'E': 77, 'F': 76, 'G': 73},\n",
+    "    'u': {'A': 72, 'B': 75, 'C': 66, 'D': 85, 'E': 88, 'F': 66, 'G': 93},\n",
+    "    'v': {'A': 71, 'B': 73, 'C': 63, 'D': 92, 'E': 76, 'F': 79, 'G': 93},\n",
+    "    'w': {'A': 79, 'B': 69, 'C': 78, 'D': 76, 'E': 67, 'F': 84, 'G': 79},\n",
+    "    \"w'\": {'A': 57, 'B': 76, 'C': 81, 'D': 76, 'E': 82, 'F': 86, 'G': 77}\n",
+    "}\n",
+    "\n",
+    "weights = {'A': 8, 'B': 7, 'C': 7, 'D': 6, 'E': 6, 'F': 5, 'G': 6}\n",
+    "\n",
+    "def get_notes(candidate_name):\n",
+    "    return candidates_data[candidate_name]\n",
+    "\n",
+    "print(\"Données chargées :\")\n",
+    "print(\"Candidats :\", list(candidates_data.keys()))\n",
+    "print(\"Poids :\", weights)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4fb65dc3",
    "metadata": {},
@@ -129,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "3f3234bf",
    "metadata": {},
    "outputs": [
@@ -137,8 +173,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Arguments Pour (Pros) : ['A', 'C', 'E']\n",
-      "Arguments Contre (Cons) : ['B', 'D', 'F']\n",
+      "Comparaison u > v\n",
+      "Arguments Pour (Pros) : ['A', 'B', 'C', 'E']\n",
+      "Arguments Contre (Cons) : ['D', 'F']\n",
+      "Deltas : {'A': 8, 'B': 14, 'C': 21, 'D': -42, 'E': 72, 'F': -65, 'G': 0}\n",
       "------------------------------\n",
       "Résultat : INFEASIBLE (Certificat de non-existence).\n"
      ]
@@ -147,23 +185,29 @@
    "source": [
     "from gurobipy import *\n",
     "\n",
-    "# DONNÉES DU PROBLÈME\n",
-    "weights = {'A': 8, 'B': 7, 'C': 7, 'D': 6, 'E': 6, 'F': 5, 'G': 6}\n",
-    "\n",
-    "# Notes des candidats u et v\n",
-    "notes_u = {'A': 72, 'B': 66, 'C': 75, 'D': 85, 'E': 88, 'F': 66, 'G': 93}\n",
-    "notes_v = {'A': 71, 'B': 73, 'C': 63, 'D': 92, 'E': 76, 'F': 79, 'G': 93}\n",
+    "# DONNÉES (Comparaison u > v)\n",
+    "candidat_1 = \"u\"\n",
+    "candidat_2 = \"v\"\n",
+    "notes_1 = get_notes(candidat_1)\n",
+    "notes_2 = get_notes(candidat_2)\n",
     "\n",
     "# Calcul des contributions (deltas)\n",
     "deltas = {}\n",
     "for k in weights:\n",
-    "    deltas[k] = weights[k] * (notes_u[k] - notes_v[k])\n",
+    "    deltas[k] = weights[k] * (notes_1[k] - notes_2[k])\n",
+    "\n",
+    "# Calcul des contributions (deltas)\n",
+    "deltas = {}\n",
+    "for k in weights:\n",
+    "    deltas[k] = weights[k] * (notes_1[k] - notes_2[k])\n",
     "\n",
     "pros = [k for k, v in deltas.items() if v > 0]\n",
     "cons = [k for k, v in deltas.items() if v < 0]\n",
     "\n",
+    "print(f\"Comparaison {candidat_1} > {candidat_2}\")\n",
     "print(f\"Arguments Pour (Pros) : {pros}\")\n",
     "print(f\"Arguments Contre (Cons) : {cons}\")\n",
+    "print(f\"Deltas : {deltas}\")\n",
     "\n",
     "# MODÉLISATION GUROBI\n",
     "m = Model(\"Explication_1_m\")\n",
@@ -212,6 +256,358 @@
     "\n",
     "elif m.status == GRB.INFEASIBLE:\n",
     "    print(\"Résultat : INFEASIBLE (Certificat de non-existence).\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebe5b1b6",
+   "metadata": {},
+   "source": [
+    "## Explication type (m-1)\n",
+    "\n",
+    "On cherche ici à expliquer la préférence $x \\succ z$ à l'aide de trade-offs de type (m-1).\n",
+    "Un trade-off de type (m-1) est constitué d'un seul argument *Con* $c$ et d'un ensemble d'arguments *Pros* $\\mathcal{P}'$ qui le compensent, c'est-à-dire :\n",
+    "$$ \\delta_c + \\sum_{p \\in \\mathcal{P}'} \\delta_p > 0 $$\n",
+    "\n",
+    "L'explication doit couvrir tous les arguments *Cons* de manière disjointe (chaque *Pro* ne sert qu'une fois)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6d8a9dee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparaison x > y\n",
+      "Arguments Pour (Pros) : ['A', 'D', 'E']\n",
+      "Arguments Contre (Cons) : ['C', 'F', 'G']\n",
+      "Deltas : {'A': 32, 'B': 0, 'C': -28, 'D': 36, 'E': 48, 'F': -35, 'G': -42}\n",
+      "------------------------------\n",
+      "Résultat : Une explication de type (m-1) existe !\n",
+      "\n",
+      "Argument Contre C (-28) compensé par :\n",
+      "  -> Pros : ['A'] (Cumul Pros: +32)\n",
+      "  -> Bilan net : +4\n",
+      "\n",
+      "Argument Contre F (-35) compensé par :\n",
+      "  -> Pros : ['D'] (Cumul Pros: +36)\n",
+      "  -> Bilan net : +1\n",
+      "\n",
+      "Argument Contre G (-42) compensé par :\n",
+      "  -> Pros : ['E'] (Cumul Pros: +48)\n",
+      "  -> Bilan net : +6\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DONNÉES (Comparaison z > t)\n",
+    "candidat_1 = \"x\"\n",
+    "candidat_2 = \"y\"\n",
+    "notes_1 = get_notes(candidat_1)\n",
+    "notes_2 = get_notes(candidat_2)\n",
+    "\n",
+    "# Calcul des contributions (deltas)\n",
+    "deltas = {}\n",
+    "for k in weights:\n",
+    "    deltas[k] = weights[k] * (notes_1[k] - notes_2[k])\n",
+    "\n",
+    "pros = [k for k, v in deltas.items() if v > 0]\n",
+    "cons = [k for k, v in deltas.items() if v < 0]\n",
+    "\n",
+    "print(f\"Comparaison {candidat_1} > {candidat_2}\")\n",
+    "print(f\"Arguments Pour (Pros) : {pros}\")\n",
+    "print(f\"Arguments Contre (Cons) : {cons}\")\n",
+    "print(f\"Deltas : {deltas}\")\n",
+    "\n",
+    "# MODÉLISATION GUROBI (m-1)\n",
+    "m = Model(\"Explication_m_1\")\n",
+    "\n",
+    "# Variables de décision y[p, c]\n",
+    "# y[p, c] = 1 si l'argument Pro 'p' est utilisé pour couvrir l'argument Con 'c'\n",
+    "y = m.addVars(pros, cons, vtype=GRB.BINARY, name=\"y\")\n",
+    "\n",
+    "m.update()\n",
+    "\n",
+    "# CONTRAINTES\n",
+    "\n",
+    "# 1. Disjonction des Pros : Chaque Pro peut être utilisé au plus une fois\n",
+    "for p in pros:\n",
+    "    m.addConstr(quicksum(y[p, c] for c in cons) <= 1, name=f\"Unique_{p}\")\n",
+    "\n",
+    "# 2. Validité des Trade-offs : Chaque Con 'c' doit être compensé par un groupe de Pros\n",
+    "# Formule : Delta_c + Somme(Delta_p * y_pc) >= epsilon\n",
+    "epsilon = 0.001\n",
+    "\n",
+    "for c in cons:\n",
+    "    # Note: deltas[c] est négatif\n",
+    "    m.addConstr(deltas[c] + quicksum(deltas[p] * y[p, c] for p in pros) >= epsilon, name=f\"Valid_Group_for_{c}\")\n",
+    "\n",
+    "# Fonction Objectif : Ici on cherche juste la faisabilité (Objectif constant)\n",
+    "m.setObjective(0, GRB.MINIMIZE)\n",
+    "\n",
+    "# Paramétrage\n",
+    "m.params.outputflag = 0\n",
+    "m.optimize()\n",
+    "\n",
+    "# ANALYSE DES RÉSULTATS\n",
+    "print(\"-\" * 30)\n",
+    "if m.status == GRB.OPTIMAL:\n",
+    "    print(\"Résultat : Une explication de type (m-1) existe !\\n\")\n",
+    "    \n",
+    "    # Pour chaque Con, on affiche les Pros qui le couvrent\n",
+    "    for c in cons:\n",
+    "        assigned_pros = [p for p in pros if y[p, c].x > 0.5]\n",
+    "        \n",
+    "        sum_pros = sum(deltas[p] for p in assigned_pros)\n",
+    "        net_value = deltas[c] + sum_pros\n",
+    "        \n",
+    "        print(f\"Argument Contre {c} ({deltas[c]}) compensé par :\")\n",
+    "        print(f\"  -> Pros : {assigned_pros} (Cumul Pros: +{sum_pros})\")\n",
+    "        print(f\"  -> Bilan net : +{net_value}\")\n",
+    "        print(\"\")\n",
+    "\n",
+    "elif m.status == GRB.INFEASIBLE:\n",
+    "    print(\"Résultat : INFEASIBLE (Pas d'explication de type (m-1)).\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a88d6a",
+   "metadata": {},
+   "source": [
+    "## Explication Mixte (Question 4)\n",
+    "\n",
+    "On cherche maintenant une explication qui combine des trade-offs de type (1-m) et (m-1) pour former une explication complète de la préférence $x \\succ y$.\n",
+    "\n",
+    "Modélisation :\n",
+    "- On définit $z_p^{1m} \\in \\{0,1\\}$ : le Pro $p$ est le pivot d'un trade-off (1-m).\n",
+    "- On définit $z_c^{m1} \\in \\{0,1\\}$ : le Con $c$ est le pivot d'un trade-off (m-1).\n",
+    "- $v_{pc} \\in \\{0,1\\}$ : $p$ couvre $c$ dans un trade-off (1-m) (nécessite $z_p^{1m}=1$).\n",
+    "- $w_{pc} \\in \\{0,1\\}$ : $p$ aide à compenser $c$ dans un trade-off (m-1) (nécessite $z_c^{m1}=1$).\n",
+    "\n",
+    "Contraintes :\n",
+    "1. **Partition des Cons** : Chaque Con est soit pivot (m-1), soit couvert par un Pro (1-m).\n",
+    "2. **Utilisation unique des Pros** : Chaque Pro est soit pivot (1-m), soit support (m-1), soit inutilisé.\n",
+    "3. **Validité** : La somme pondérée de chaque trade-off formé doit être strictement positive.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "453452df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparaison x > y\n",
+      "Arguments Pour (Pros) : ['A', 'D', 'E']\n",
+      "Arguments Contre (Cons) : ['C', 'F', 'G']\n",
+      "Deltas : {'A': 32, 'B': 0, 'C': -28, 'D': 36, 'E': 48, 'F': -35, 'G': -42}\n",
+      "------------------------------\n",
+      "Solution Mixte trouvée !\n",
+      "\n",
+      "[Type 1-m] Le Pro 'A' (32) couvre les Cons ['C'] (Net: +4)\n",
+      "[Type m-1] Le Con 'F' (-35) est compensé par les Pros ['D'] (Net: +1)\n",
+      "[Type m-1] Le Con 'G' (-42) est compensé par les Pros ['E'] (Net: +6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DONNÉES Comparaison 1 > 2\n",
+    "candidat_1 = \"x\"\n",
+    "candidat_2 = \"y\"\n",
+    "notes_1 = get_notes(candidat_1)\n",
+    "notes_2 = get_notes(candidat_2)\n",
+    "\n",
+    "# Calcul des contributions\n",
+    "deltas = {}\n",
+    "for k in weights:\n",
+    "    deltas[k] = weights[k] * (notes_1[k] - notes_2[k])\n",
+    "\n",
+    "pros = [k for k, v in deltas.items() if v > 0]\n",
+    "cons = [k for k, v in deltas.items() if v < 0]\n",
+    "\n",
+    "print(f\"Comparaison {candidat_1} > {candidat_2}\")\n",
+    "print(f\"Arguments Pour (Pros) : {pros}\")\n",
+    "print(f\"Arguments Contre (Cons) : {cons}\")\n",
+    "print(f\"Deltas : {deltas}\")\n",
+    "\n",
+    "# MODÈLE MIXTE\n",
+    "m = Model(\"Explication_Mixte\")\n",
+    "\n",
+    "# Variables\n",
+    "z_1m = m.addVars(pros, vtype=GRB.BINARY, name=\"z_1m\")  # p est pivot 1-m\n",
+    "z_m1 = m.addVars(cons, vtype=GRB.BINARY, name=\"z_m1\")  # c est pivot m-1\n",
+    "\n",
+    "v = m.addVars(pros, cons, vtype=GRB.BINARY, name=\"v\") # relation dans 1-m (p couvre c)\n",
+    "w = m.addVars(pros, cons, vtype=GRB.BINARY, name=\"w\") # relation dans m-1 (p aide c)\n",
+    "\n",
+    "m.update()\n",
+    "\n",
+    "# CONTRAINTES\n",
+    "\n",
+    "# 1. Couverture des Cons\n",
+    "# Chaque c est soit un pivot m-1, soit couvert par un p en mode 1-m\n",
+    "for c in cons:\n",
+    "    m.addConstr(z_m1[c] + quicksum(v[p, c] for p in pros) == 1, name=f\"CoverCons_{c}\")\n",
+    "\n",
+    "# 2. Utilisation unique des Pros\n",
+    "# Chaque p est soit un pivot 1-m, soit un support m-1 (ou rien)\n",
+    "for p in pros:\n",
+    "    m.addConstr(z_1m[p] + quicksum(w[p, c] for c in cons) <= 1, name=f\"UniquePro_{p}\")\n",
+    "\n",
+    "# 3. Consistance des liens\n",
+    "# Si p couvre c en 1-m (v[p,c]=1), alors p doit être un pivot 1-m\n",
+    "for p in pros:\n",
+    "    for c in cons:\n",
+    "        m.addConstr(v[p, c] <= z_1m[p])\n",
+    "\n",
+    "# Si p aide c en m-1 (w[p,c]=1), alors c doit être un pivot m-1\n",
+    "for p in pros:\n",
+    "    for c in cons:\n",
+    "        m.addConstr(w[p, c] <= z_m1[c])\n",
+    "\n",
+    "# 4. Validité des groupes (Solvabilité budgétaire)\n",
+    "epsilon = 0.001\n",
+    "BigM = 1000\n",
+    "\n",
+    "# Pour chaque p pivot 1-m : Delta_p + Somme(Delta_c) > 0\n",
+    "for p in pros:\n",
+    "    # Si z_1m[p] = 0, la contrainte est relâchée ( >= -1000 )\n",
+    "    m.addConstr(deltas[p] + quicksum(deltas[c] * v[p, c] for c in cons) >= epsilon - BigM * (1 - z_1m[p]))\n",
+    "\n",
+    "# Pour chaque c pivot m-1 : Delta_c + Somme(Delta_p) > 0\n",
+    "for c in cons:\n",
+    "    # Si z_m1[c] = 0, la contrainte est relâchée\n",
+    "    m.addConstr(deltas[c] + quicksum(deltas[p] * w[p, c] for p in pros) >= epsilon - BigM * (1 - z_m1[c]))\n",
+    "\n",
+    "# Objectif : Minimiser le nombre de pivots (pour avoir une explication compacte) ou juste Feasibility\n",
+    "# Essayons de minimiser le nombre total de trade-offs\n",
+    "m.setObjective(quicksum(z_1m[p] for p in pros) + quicksum(z_m1[c] for c in cons), GRB.MINIMIZE)\n",
+    "m.params.outputflag = 0\n",
+    "m.optimize()\n",
+    "\n",
+    "# RÉSULTATS\n",
+    "print(\"-\" * 30)\n",
+    "if m.status == GRB.OPTIMAL:\n",
+    "    print(\"Solution Mixte trouvée !\\n\")\n",
+    "    \n",
+    "    # Affichage des trade-offs (1-m)\n",
+    "    for p in pros:\n",
+    "        if z_1m[p].x > 0.5:\n",
+    "            my_cons = [c for c in cons if v[p, c].x > 0.5]\n",
+    "            val = deltas[p] + sum(deltas[c] for c in my_cons)\n",
+    "            print(f\"[Type 1-m] Le Pro '{p}' ({deltas[p]}) couvre les Cons {my_cons} (Net: +{val})\")\n",
+    "\n",
+    "    # Affichage des trade-offs (m-1)\n",
+    "    for c in cons:\n",
+    "        if z_m1[c].x > 0.5:\n",
+    "            my_pros = [p for p in pros if w[p, c].x > 0.5]\n",
+    "            val = deltas[c] + sum(deltas[p] for p in my_pros)\n",
+    "            print(f\"[Type m-1] Le Con '{c}' ({deltas[c]}) est compensé par les Pros {my_pros} (Net: +{val})\")\n",
+    "            \n",
+    "elif m.status == GRB.INFEASIBLE:\n",
+    "    print(\"INFEASIBLE. Pas d'explication mixte possible.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "26bc4ec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "========================================\n",
+      "COMPARAISON NOUVEAUX CANDIDATS\n",
+      "Pros : ['A', 'E', 'F']\n",
+      "Cons : ['B', 'C', 'D']\n",
+      "Deltas : {'A': 144, 'B': -70, 'C': -70, 'D': -66, 'E': 36, 'F': 27.5, 'G': 0}\n",
+      "------------------------------\n",
+      "INFEASIBLE. Pas d'explication mixte possible.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NOUVEAUX CANDIDATS (a1>a2)\n",
+    "notes_a1 = {'A': 89, 'B': 74, 'C': 81, 'D': 68, 'E': 84, 'F': 79, 'G': 77}\n",
+    "notes_a2 = {'A': 71, 'B': 84, 'C': 91, 'D': 79, 'E': 78, 'F': 73.5, 'G': 77}\n",
+    "\n",
+    "# Calcul des deltas pour Nouveaux Candidats\n",
+    "# Calcul des contributions\n",
+    "deltas = {}\n",
+    "for k in weights:\n",
+    "    deltas[k] = weights[k] * (notes_a1[k] - notes_a2[k])\n",
+    "pros = [k for k, v in deltas.items() if v > 0]\n",
+    "cons = [k for k, v in deltas.items() if v < 0]\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*40)\n",
+    "print(\"COMPARAISON NOUVEAUX CANDIDATS\")\n",
+    "print(f\"Pros : {pros}\")\n",
+    "print(f\"Cons : {cons}\")\n",
+    "print(f\"Deltas : {deltas}\")\n",
+    "\n",
+    "# Réinitialisation et re-résolution du modèle avec les nouvelles données\n",
+    "m.reset()\n",
+    "m = Model(\"Explication_Mixte_New\")\n",
+    "\n",
+    "# On recrée les variables et contraintes car les ensembles pros/cons ont changé\n",
+    "z_1m = m.addVars(pros, vtype=GRB.BINARY, name=\"z_1m\")\n",
+    "z_m1 = m.addVars(cons, vtype=GRB.BINARY, name=\"z_m1\")\n",
+    "v = m.addVars(pros, cons, vtype=GRB.BINARY, name=\"v\")\n",
+    "w = m.addVars(pros, cons, vtype=GRB.BINARY, name=\"w\")\n",
+    "\n",
+    "# CONTRAINTES IDENTIQUES AU BLOC PRÉCÉDENT\n",
+    "for c in cons:\n",
+    "    m.addConstr(z_m1[c] + quicksum(v[p, c] for p in pros) == 1)\n",
+    "\n",
+    "for p in pros:\n",
+    "    m.addConstr(z_1m[p] + quicksum(w[p, c] for c in cons) <= 1)\n",
+    "\n",
+    "for p in pros:\n",
+    "    for c in cons:\n",
+    "        m.addConstr(v[p, c] <= z_1m[p])\n",
+    "        m.addConstr(w[p, c] <= z_m1[c])\n",
+    "\n",
+    "for p in pros:\n",
+    "    m.addConstr(deltas[p] + quicksum(deltas[c] * v[p, c] for c in cons) >= epsilon - BigM * (1 - z_1m[p]))\n",
+    "\n",
+    "for c in cons:\n",
+    "    m.addConstr(deltas[c] + quicksum(deltas[p] * w[p, c] for p in pros) >= epsilon - BigM * (1 - z_m1[c]))\n",
+    "\n",
+    "# Résolution\n",
+    "m.setObjective(quicksum(z_1m[p] for p in pros) + quicksum(z_m1[c] for c in cons), GRB.MINIMIZE)\n",
+    "m.params.outputflag = 0\n",
+    "m.optimize()\n",
+    "\n",
+    "# RÉSULTATS\n",
+    "print(\"-\" * 30)\n",
+    "if m.status == GRB.OPTIMAL:\n",
+    "    print(\"Solution Mixte trouvée pour les nouveaux candidats !\\n\")\n",
+    "    for p in pros:\n",
+    "        if z_1m[p].x > 0.5:\n",
+    "            my_cons = [c for c in cons if v[p, c].x > 0.5]\n",
+    "            val = deltas[p] + sum(deltas[c] for c in my_cons)\n",
+    "            print(f\"[Type 1-m] Le Pro '{p}' ({deltas[p]}) couvre {my_cons} (Net: +{val})\")\n",
+    "\n",
+    "    for c in cons:\n",
+    "        if z_m1[c].x > 0.5:\n",
+    "            my_pros = [p for p in pros if w[p, c].x > 0.5]\n",
+    "            val = deltas[c] + sum(deltas[p] for p in my_pros)\n",
+    "            print(f\"[Type m-1] Le Con '{c}' ({deltas[c]}) est compensé par {my_pros} (Net: +{val})\")\n",
+    "            \n",
+    "elif m.status == GRB.INFEASIBLE:\n",
+    "    print(\"INFEASIBLE. Pas d'explication mixte possible.\")\n"
    ]
   }
  ],
