--- a/tp_breast_cancer.ipynb
+++ b/tp_breast_cancer.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3ffe31e5",
    "metadata": {},
    "outputs": [
@@ -213,6 +213,7 @@
     "y = 1 - df[\"Benign\"]\n",
     "X = df[features]\n",
     "\n",
+    "#aeeaeae\n",
     "# =========================\n",
     "# 2. Poids (importance globale)\n",
     "# =========================\n",
