--- a/tp_breast_cancer.ipynb
+++ b/tp_breast_cancer.ipynb
@@ -323,11 +323,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2e3e1bbb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pros : ['UniformityOfCellSize', 'UniformityOfCellShape', 'MarginalAdhesion', 'SingleEpithelialCellSize', 'BareNuclei', 'BlandChromatin', 'NormalNucleoli', 'Mitoses']\n",
+      "Cons : ['ClumpThickness']\n",
+      "Deltas : {'ClumpThickness': np.float64(-0.3987334728092868), 'UniformityOfCellSize': np.float64(1.7653840695625356), 'UniformityOfCellShape': np.float64(1.8206749690384447), 'MarginalAdhesion': np.float64(1.2926320195206518), 'SingleEpithelialCellSize': np.float64(0.8528224423288597), 'BareNuclei': np.float64(2.093477931578111), 'BlandChromatin': np.float64(0.3374834210514831), 'NormalNucleoli': np.float64(1.343705371767472), 'Mitoses': np.float64(0.2554327138706111)}\n",
+      "Set parameter WLSAccessID\n",
+      "Set parameter WLSSecret\n",
+      "Set parameter LicenseID to value 2763136\n",
+      "Academic license 2763136 - for non-commercial use only - registered to si___@student-cs.fr\n",
+      "\n",
+      "----------------------------------------\n",
+      "✔ Explication (m–1) trouvée\n",
+      "\n",
+      "Argument Contre ClumpThickness (Δ=-0.3987) compensé par : ['UniformityOfCellSize', 'UniformityOfCellShape', 'MarginalAdhesion', 'SingleEpithelialCellSize', 'BareNuclei', 'BlandChromatin', 'NormalNucleoli', 'Mitoses']\n",
+      "  cumul Pros = +9.7616, bilan net = +9.3629\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from gurobipy import *\n",
+    "\n",
+    "# =========================\n",
+    "# 1. Chargement des données\n",
+    "# =========================\n",
+    "\n",
+    "df = pd.read_csv(\"breastcancer_processed.csv\")\n",
+    "\n",
+    "features = [\n",
+    "    \"ClumpThickness\",\n",
+    "    \"UniformityOfCellSize\",\n",
+    "    \"UniformityOfCellShape\",\n",
+    "    \"MarginalAdhesion\",\n",
+    "    \"SingleEpithelialCellSize\",\n",
+    "    \"BareNuclei\",\n",
+    "    \"BlandChromatin\",\n",
+    "    \"NormalNucleoli\",\n",
+    "    \"Mitoses\"\n",
+    "]\n",
+    "\n",
+    "# Classe cible : Malignant = 1\n",
+    "y = 1 - df[\"Benign\"]\n",
+    "X = df[features]\n",
+    "\n",
+    "# =========================\n",
+    "# 2. Poids (importance globale)\n",
+    "# =========================\n",
+    "\n",
+    "weights = X.apply(lambda col: col.corr(y)).to_dict()\n",
+    "\n",
+    "# =========================\n",
+    "# 3. Instance à expliquer\n",
+    "# =========================\n",
+    "\n",
+    "i = 0  # patient choisi\n",
+    "x = X.iloc[i]\n",
+    "mu = X.mean()\n",
+    "\n",
+    "# =========================\n",
+    "# 4. Calcul des deltas\n",
+    "# =========================\n",
+    "\n",
+    "deltas = {f: weights[f] * (x[f] - mu[f]) for f in features}\n",
+    "\n",
+    "pros = [f for f in deltas if deltas[f] > 0]\n",
+    "cons = [f for f in deltas if deltas[f] < 0]\n",
+    "\n",
+    "print(\"Pros :\", pros)\n",
+    "print(\"Cons :\", cons)\n",
+    "print(\"Deltas :\", deltas)\n",
+    "\n",
+    "# =========================\n",
+    "# 5. Modèle Gurobi m–1\n",
+    "# =========================\n",
+    "\n",
+    "m = Model(\"BreastCancer_Explanation_m_1\")\n",
+    "\n",
+    "# y[p, c] = 1 si le Pro 'p' couvre le Con 'c'\n",
+    "y_var = m.addVars(pros, cons, vtype=GRB.BINARY, name=\"y\")\n",
+    "m.update()\n",
+    "\n",
+    "# =========================\n",
+    "# 6. Contraintes m–1\n",
+    "# =========================\n",
+    "\n",
+    "# A. Chaque Pro utilisé au plus une fois\n",
+    "for p in pros:\n",
+    "    m.addConstr(quicksum(y_var[p, c] for c in cons) <= 1, name=f\"Unique_{p}\")\n",
+    "\n",
+    "# B. Chaque Con doit être compensé par un ou plusieurs Pros\n",
+    "epsilon = 1e-6\n",
+    "for c in cons:\n",
+    "    m.addConstr(\n",
+    "        deltas[c] + quicksum(deltas[p] * y_var[p, c] for p in pros) >= epsilon,\n",
+    "        name=f\"Valid_Group_for_{c}\"\n",
+    "    )\n",
+    "\n",
+    "# =========================\n",
+    "# 7. Résolution\n",
+    "# =========================\n",
+    "\n",
+    "m.setObjective(0, GRB.MINIMIZE)\n",
+    "m.params.outputflag = 0\n",
+    "m.optimize()\n",
+    "\n",
+    "# =========================\n",
+    "# 8. Analyse des résultats\n",
+    "# =========================\n",
+    "\n",
+    "print(\"\\n\" + \"-\" * 40)\n",
+    "if m.status == GRB.OPTIMAL:\n",
+    "    print(\"✔ Explication (m–1) trouvée\\n\")\n",
+    "    for c in cons:\n",
+    "        assigned_pros = [p for p in pros if y_var[p, c].x > 0.5]\n",
+    "        sum_pros = sum(deltas[p] for p in assigned_pros)\n",
+    "        net_value = deltas[c] + sum_pros\n",
+    "        print(f\"Argument Contre {c} (Δ={deltas[c]:+.4f}) compensé par : {assigned_pros}\")\n",
+    "        print(f\"  cumul Pros = {sum_pros:+.4f}, bilan net = {net_value:+.4f}\\n\")\n",
+    "\n",
+    "elif m.status == GRB.INFEASIBLE:\n",
+    "    print(\"✘ Aucune explication (m–1) possible.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0312ef2a",
+   "metadata": {},
+   "source": [
+    "Ici, chaque con doit être compensé par un ou plusieurs pros et chaque pro peut être utilisé au plus une fois.\n",
+    "\n",
+    "Le seul con est 'ClumpThickness', tous les autres critères vont servir à le compenser.\n",
+    "\n",
+    "La somme des Pros (+9.7616) est largement supérieure au delta négatif (-0.3987), donc la contrainte est satisfaite.\n",
+    "\n",
+    "Même si ClumpThickness est contre, l’ensemble des autres variables (pros) compense largement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9abeb313",
+   "metadata": {},
+   "source": [
+    "Modèle mixte 1-m et m-1"
+   ]
   }
  ],
  "metadata": {
