--- a/tp_sdp_christophe_simon_nathan.ipynb
+++ b/tp_sdp_christophe_simon_nathan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cf60fc48",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "0a5e29a9",
    "metadata": {},
    "outputs": [
@@ -31,6 +31,9 @@
       "Pros: ['A', 'D', 'E']\n",
       "Cons: ['C', 'F', 'G']\n",
       "Nombre de paires valides identifiées : 6\n",
+      "Set parameter Username\n",
+      "Set parameter LicenseID to value 2755283\n",
+      "Academic license - for non-commercial use only - expires 2026-12-15\n",
       "\n",
       "Solution Optimale Trouvée (Explication Valide) :\n",
       " - Trade-off (A,C)\n",
@@ -118,6 +121,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "463e3f9a",
+   "metadata": {},
+   "source": [
+    "### Justification de la Modélisation (1-1)\n",
+    "\n",
+    "**Variables de décision :**\n",
+    "*   $c_{pq} \\in \\{0, 1\\}$ : Variable binaire qui vaut 1 si le critère $p \\in Pros$ compense le critère $q \\in Cons$, 0 sinon.\n",
+    "*   Nous ne considérons que les paires \"valides\" où la somme des contributions est positive ($\\delta_p + \\delta_q > 0$) afin de réduire la taille du problème.\n",
+    "\n",
+    "**Contraintes :**\n",
+    "1.  **Couverture complète des Cons :** $\\sum_{p \\in Pros} c_{pq} = 1, \\forall q \\in Cons$. Chaque désavantage doit être compensé exactement une fois.\n",
+    "2.  **Utilisation unique des Pros :** $\\sum_{q \\in Cons} c_{pq} \\le 1, \\forall p \\in Pros$. Chaque avantage ne peut servir à compenser qu'un seul désavantage.\n",
+    "\n",
+    "**Validité :**\n",
+    "*   La condition de validité ($\\delta_p + \\delta_q > 0$) est assurée par le pré-filtrage des variables $c_{pq}$ lors de leur création. Si une paire n'est pas valide, la variable n'existe simplement pas dans le modèle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02c55808",
    "metadata": {},
    "source": [
@@ -126,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "42e3dfd9",
    "metadata": {},
    "outputs": [
@@ -173,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "3f3234bf",
    "metadata": {},
    "outputs": [
@@ -283,6 +305,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "703314ae",
+   "metadata": {},
+   "source": [
+    "### Justification de la Modélisation (1-m)\n",
+    "\n",
+    "**Variables de décision :**\n",
+    "*   $x_{pc} \\in \\{0, 1\\}$ : Vaut 1 si l'argument *Pro* $p$ couvre l'argument *Con* $c$.\n",
+    "\n",
+    "**Contraintes :**\n",
+    "1.  **Couverture des Cons :** $\\sum_{p \\in Pros} x_{pc} = 1, \\forall c \\in Cons$. Chaque *Con* doit être couvert par exactement un *Pro*. Un *Pro* peut couvrir plusieurs *Cons*.\n",
+    "2.  **Validité du Trade-off (1-m) :** Pour chaque *Pro* $p$, la somme de sa contribution positive et des contributions négatives qu'il couvre doit rester positive :\n",
+    "    $$ \\delta_p + \\sum_{c \\in Cons} \\delta_c x_{pc} \\ge \\epsilon $$\n",
+    "    Cette contrainte n'est active que si $p$ est utilisé. Si $p$ n'est pas utilisé (tous les $x_{pc}=0$), la contrainte devient $\\delta_p \\ge \\epsilon$, ce qui est trivialement vrai car $\\delta_p > 0$.\n",
+    "\n",
+    "**Choix de $\\epsilon$ :**\n",
+    "*   On utilise un petit $\\epsilon = 0.001$ pour simuler une inégalité stricte ($> 0$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "894d7396",
    "metadata": {},
    "source": [
@@ -291,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "143e87e1",
    "metadata": {},
    "outputs": [
@@ -319,7 +361,7 @@
    "source": [
     "## Explication type (m-1)\n",
     "\n",
-    "On cherche ici à expliquer la préférence $x \\succ z$ à l'aide de trade-offs de type (m-1).\n",
+    "On cherche ici à expliquer la préférence $x \\succ y$ à l'aide de trade-offs de type (m-1).\n",
     "Un trade-off de type (m-1) est constitué d'un seul argument *Con* $c$ et d'un ensemble d'arguments *Pros* $\\mathcal{P}'$ qui le compensent, c'est-à-dire :\n",
     "$$ \\delta_c + \\sum_{p \\in \\mathcal{P}'} \\delta_p > 0 $$\n",
     "\n",
@@ -328,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "6d8a9dee",
    "metadata": {},
    "outputs": [
@@ -394,7 +436,7 @@
     "        m.addConstr(quicksum(x[p, c] for c in cons) <= 1, name=f\"Unique_{p}\")\n",
     "\n",
     "    # 2. Validité des Trade-offs : Chaque Con 'c' doit être compensé par un groupe de Pros\n",
-    "    # Formule : Delta_c + Somme(Delta_p * y_pc) >= epsilon\n",
+    "    # Formule : Delta_c + Somme(Delta_p * x_pc) >= epsilon\n",
     "    epsilon = 0.001\n",
     "\n",
     "    for c in cons:\n",
@@ -434,6 +476,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "acdc0d8e",
+   "metadata": {},
+   "source": [
+    "### Justification de la Modélisation (m-1)\n",
+    "\n",
+    "**Variables de décision :**\n",
+    "*   $x_{pc} \\in \\{0, 1\\}$ : Vaut 1 si l'argument *Pro* $p$ participe à la couverture de l'argument *Con* $c$.\n",
+    "\n",
+    "**Contraintes :**\n",
+    "1.  **Utilisation unique des Pros :** $\\sum_{c \\in Cons} x_{pc} \\le 1, \\forall p \\in Pros$. Chaque *Pro* ne peut participer qu'à un seul groupe de compensation.\n",
+    "2.  **Validité du Trade-off (m-1) :** Pour chaque *Con* $c$, la somme de sa contribution négative et des contributions des *Pros* qui le couvrent doit être positive :\n",
+    "    $$ \\delta_c + \\sum_{p \\in Pros} \\delta_p x_{pc} \\ge \\epsilon $$\n",
+    "    Contrairement au cas (1-m), chaque *Con* doit obligatoirement être couvert, donc cette contrainte doit être valide pour tout $c$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86708f9d",
    "metadata": {},
    "source": [
@@ -442,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "d068f449",
    "metadata": {},
    "outputs": [
@@ -470,23 +529,12 @@
    "source": [
     "## Explication Mixte (Question 4)\n",
     "\n",
-    "On cherche maintenant une explication qui combine des trade-offs de type (1-m) et (m-1) pour former une explication complète de la préférence $x \\succ y$.\n",
-    "\n",
-    "Modélisation :\n",
-    "- On définit $z_p^{1m} \\in \\{0,1\\}$ : le Pro $p$ est le pivot d'un trade-off (1-m).\n",
-    "- On définit $z_c^{m1} \\in \\{0,1\\}$ : le Con $c$ est le pivot d'un trade-off (m-1).\n",
-    "- $v_{pc} \\in \\{0,1\\}$ : $p$ couvre $c$ dans un trade-off (1-m) (nécessite $z_p^{1m}=1$).\n",
-    "- $w_{pc} \\in \\{0,1\\}$ : $p$ aide à compenser $c$ dans un trade-off (m-1) (nécessite $z_c^{m1}=1$).\n",
-    "\n",
-    "Contraintes :\n",
-    "1. **Partition des Cons** : Chaque Con est soit pivot (m-1), soit couvert par un Pro (1-m).\n",
-    "2. **Utilisation unique des Pros** : Chaque Pro est soit pivot (1-m), soit support (m-1), soit inutilisé.\n",
-    "3. **Validité** : La somme pondérée de chaque trade-off formé doit être strictement positive.\n"
+    "On cherche maintenant une explication qui combine des trade-offs de type (1-m) et (m-1) pour former une explication complète de la préférence $x \\succ y$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "453452df",
    "metadata": {},
    "outputs": [
@@ -611,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "26bc4ec8",
    "metadata": {},
    "outputs": [
@@ -634,6 +682,43 @@
     "notes_a2 = {'A': 71, 'B': 84, 'C': 91, 'D': 79, 'E': 78, 'F': 73.5, 'G': 77}\n",
     "\n",
     "mixt_compare(\"a1\", \"a2\", notes_a1, notes_a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eae5dcf",
+   "metadata": {},
+   "source": [
+    "### Justification de la Modélisation Mixte\n",
+    "\n",
+    "Pour combiner les types (1-m) et (m-1), nous devons décider pour chaque élément s'il joue le rôle de pivot (chef de groupe) ou de membre de soutien.\n",
+    "\n",
+    "**Variables de décision :**\n",
+    "*   **Pivots** :\n",
+    "    *   $z^{1m}_p \\in \\{0,1\\}$ : Le *Pro* $p$ mène un trade-off (1-m).\n",
+    "    *   $z^{m1}_c \\in \\{0,1\\}$ : Le *Con* $c$ est au cœur d'un trade-off (m-1).\n",
+    "*   **Liens** :\n",
+    "    *   $v_{pc} \\in \\{0,1\\}$ : $p$ couvre $c$ (dans un motif 1-m).\n",
+    "    *   $w_{pc} \\in \\{0,1\\}$ : $p$ aide à compenser $c$ (dans un motif m-1).\n",
+    "\n",
+    "**Contraintes Fondamentales :**\n",
+    "1.  **Partition des Cons :** Chaque *Con* $c$ doit être soit un pivot de type (m-1), soit être couvert par un *Pro* (type 1-m). Les deux cas sont exclusifs :\n",
+    "    $$ z^{m1}_c + \\sum_{p} v_{pc} = 1 $$\n",
+    "2.  **Partition des Pros :** Chaque *Pro* $p$ doit être soit un pivot de type (1-m), soit aider un *Con* (type m-1), soit être inutilisé :\n",
+    "    $$ z^{1m}_p + \\sum_{c} w_{pc} \\le 1 $$\n",
+    "\n",
+    "**Contraintes Logiques (Big-M) :**\n",
+    "*   L'objectif est d'imposer la règle **\"Le bilan du groupe doit être positif\"** UNIQUEMENT si le groupe **existe** (c'est-à-dire si le pivot est actif).\n",
+    "*   Pour cela, nous utilisons la méthode \"Big-M\" qui consiste à ajouter un terme de relâchement très grand ($M$) lorsque la condition n'est pas remplie.\n",
+    "*   Par exemple, pour un pivot (1-m) potentiel $p$, la contrainte est :\n",
+    "    $$ \\underbrace{\\delta_p + \\sum_{c} \\delta_c v_{pc}}_{\\text{Bilan du groupe}} \\ge \\epsilon - \\underbrace{M(1 - z^{1m}_p)}_{\\text{Terme \"Joker\"}} $$\n",
+    "*   **Cas 1 : Pivot Actif ($z^{1m}_p=1$)**\n",
+    "    *   Le terme \"Joker\" devient $M(1-1) = 0$.\n",
+    "    *   La contrainte devient $\\text{Bilan} \\ge \\epsilon$. $\\rightarrow$ **La règle de validité est STRICTE et ACTIVE.**\n",
+    "*   **Cas 2 : Pivot Inactif ($z^{1m}_p=0$)**\n",
+    "    *   Le terme \"Joker\" devient $M(1-0) = M$ (ex: 1000).\n",
+    "    *   La contrainte devient $\\text{Bilan} \\ge \\epsilon - 1000$ (ex: $\\ge -999.999$).\n",
+    "    *   Comme le \"Bilan\" (somme des notes) ne descendra jamais aussi bas, cette contrainte est mathématiquement **TOUJOURS VRAIE**. Elle ne contraint plus rien. $\\rightarrow$ **La règle est DÉSACTIVÉE, le solveur est libre.**"
    ]
   }
  ],
